@@ -74,18 +74,23 @@ AC_PROG_RANLIB
 
 m4_ifndef([PKG_CHECK_MODULES],
     [m4_fatal([Cannot find pkg.m4; see the INSTALL document for help])])
+
 m4_ifndef([ATF_CHECK_CXX],
     [m4_fatal([Cannot find atf-c++.m4; see the INSTALL document for help])])
-ATF_CHECK_CXX([>= 0.13])
+ATF_CHECK_CXX([>= 0.15])
+m4_ifndef([ATF_CHECK_SH],
+    [m4_fatal([Cannot find atf-sh.m4; see the INSTALL document for help])])
+ATF_CHECK_SH([>= 0.15])
+m4_ifndef([ATF_ARG_WITH],
+    [m4_fatal([Cannot find atf-common.m4; see the INSTALL document for help])])
+ATF_ARG_WITH
+
 PKG_CHECK_MODULES([LUTOK], [lutok >= 0.1],
                   [],
                   AC_MSG_ERROR([lutok (0.1 or newer) is required]))
 PKG_CHECK_MODULES([SQLITE3], [sqlite3 >= 3.6.22],
                   [],
                   AC_MSG_ERROR([sqlite3 (3.6.22 or newer) is required]))
-m4_ifndef([ATF_CHECK_SH],
-    [m4_fatal([Cannot find atf-sh.m4; see the INSTALL document for help])])
-ATF_CHECK_SH([>= 0.14])
 KYUA_DOXYGEN
 AC_PATH_PROG([GIT], [git])
 
