@@ -35,6 +35,7 @@ libengine_a_SOURCES += engine/atf_iface/test_case.hpp
 libengine_a_SOURCES += engine/atf_iface/test_program.cpp
 libengine_a_SOURCES += engine/atf_iface/test_program.hpp
 
+if WITH_ATF
 tests_engine_atf_ifacedir = $(pkgtestsdir)/engine/atf_iface
 
 tests_engine_atf_iface_DATA = engine/atf_iface/Kyuafile
@@ -86,3 +87,4 @@ engine_atf_iface_test_program_test_CXXFLAGS = $(ENGINE_CFLAGS) \
                                               $(UTILS_CFLAGS) $(ATF_CXX_CFLAGS)
 engine_atf_iface_test_program_test_LDADD = $(ENGINE_LIBS) $(UTILS_TEST_LIBS) \
                                            $(UTILS_LIBS) $(ATF_CXX_LIBS)
+endif
