@@ -31,6 +31,7 @@ libengine_a_SOURCES += engine/plain_iface/test_case.hpp
 libengine_a_SOURCES += engine/plain_iface/test_program.cpp
 libengine_a_SOURCES += engine/plain_iface/test_program.hpp
 
+if WITH_ATF
 tests_engine_plain_ifacedir = $(pkgtestsdir)/engine/plain_iface
 
 tests_engine_plain_iface_DATA = engine/plain_iface/Kyuafile
@@ -60,3 +61,4 @@ engine_plain_iface_test_program_test_CXXFLAGS = $(ENGINE_CFLAGS) \
                                                 $(ATF_CXX_CFLAGS)
 engine_plain_iface_test_program_test_LDADD = $(ENGINE_LIBS) $(UTILS_TEST_LIBS) \
                                              $(UTILS_LIBS) $(ATF_CXX_LIBS)
+endif
