@@ -36,6 +36,7 @@ libutils_a_SOURCES += utils/logging/macros.hpp
 libutils_a_SOURCES += utils/logging/operations.cpp
 libutils_a_SOURCES += utils/logging/operations.hpp
 
+if WITH_ATF
 tests_utils_loggingdir = $(pkgtestsdir)/utils/logging
 
 tests_utils_logging_DATA = utils/logging/Kyuafile
@@ -55,3 +56,4 @@ tests_utils_logging_PROGRAMS += utils/logging/operations_test
 utils_logging_operations_test_SOURCES = utils/logging/operations_test.cpp
 utils_logging_operations_test_CXXFLAGS = $(UTILS_CFLAGS) $(ATF_CXX_CFLAGS)
 utils_logging_operations_test_LDADD = $(UTILS_LIBS) $(ATF_CXX_LIBS)
+endif
