@@ -3,7 +3,10 @@ Changes in version 0.4
 
 STILL UNDER DEVELOPMENT; NOT RELEASED YET.
 
-* No changes recorded.
+* Added a '--with-atf' flag to the configure script to control whether
+  the ATF tests get built or not.  May be useful for packaging systems
+  that do not have ATF in them yet.  Disabling ATF also cuts down the
+  build time of Kyua significantly, but with the obvious drawbacks.
 
 
 Changes in version 0.3
